docker-2/etc/kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpinfo
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: phpinfo
  type: ClusterIP
