docker-2/etc/kubernetes/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: phpinfo
spec:
  podSelector:
    matchLabels:
      app: phpinfo
  ingress:
  - ports:
    - port: 8080
